--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+output/ormconfig.json
+output/
+tsconfig.json
+
 
 # TypeScript v1 declaration files
 typings/
