--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
     "@nestjs/swagger": "^5.1.4",
     "@nestjs/typeorm": "^8.0.2",
     "@types/redis": "^2.8.32",
+    "aws-sdk": "^2.1014.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
+    "multer": "^1.4.3",
+    "multer-s3": "^2.10.0",
+    "multer-s3-transform": "^2.10.3",
     "mysql2": "^2.3.2",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
@@ -43,6 +47,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
+    "sharp": "^0.29.2",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.38",
     "typeorm-model-generator": "^0.4.6"
